<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:hint="Email"
        android:background="@drawable/roundedshapeedittext"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="392dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:hint="Password"
        android:background="@drawable/roundedshapeedittext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/buttonshape"
        android:text="התחבר"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/buttonshape"
        android:text="אין לך משתמש?\n הירשם!"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.264" />
</androidx.constraintlayout.widget.ConstraintLayout>